# OPPU

./: .gitignore  Dockerfile  OPPU.py  docker-compose.yml  pyproject.toml  run.sh  task_LoRA.py
output/0/: output-OPPU-knews_headline-news_headline-Llama-2-7b-hf.json
