[project]
name = "oppu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.5.2",
    "datasets>=3.4.1",
    "marimo>=0.11.29",
    "peft>=0.15.0",
    "rank-bm25>=0.2.2",
    "torch>=2.6.0",
    "transformers>=4.50.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]
